<resources>
    <string name="app_name">Where is My Car?</string>
    <string name="find_car">Find Car</string>
    <string name="set_location">Set Location</string>
    <string name="about">About</string>
    <string name="about_description">This application is designed to help you locate your car. Once arriving to your destination select Set Location. This will store your location. Select Find Car when you are ready to navigate back to your vehicle. The application will use the last known location when you select Find Car. Thank you for using this application.</string>
    <string name="david_vignero_nbrad_munsch_ndarran_lewis_nluis_disla_nmarkus_gray_nnicholas_johnson_nscott_vorisek">David Vignero\nBrad Munsch\nDarran Lewis\nLuis Disla\nMarkus Gray\nNicholas Johnson\nScott Vorisek</string>
    <string name="developers">Developers</string>
    <string name="title_activity_find_car">FindCarActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Map</string>
</resources>
