<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/about_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:cropToPadding="false"
        android:paddingTop="50dp"

        android:src="@mipmap/about_icon" />

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/about_description"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/developer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/developers"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"


        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/developer_names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/david_vignero_nbrad_munsch_ndarran_lewis_nluis_disla_nmarkus_gray_nnicholas_johnson_nscott_vorisek"
        android:textAlignment="center"
        android:textSize="20sp" />


</LinearLayout>